--- a/mkdocs/themes/slate/css/base.css
+++ b/mkdocs/themes/slate/css/base.css
@@ -2,13 +2,11 @@ body {
     padding-top: 70px;
 }
 
-@media (min-width: 992px) {
-    h1[id]:before, h2[id]:before, h3[id]:before, h4[id]:before, h5[id]:before, h6[id]:before {
-        content: "";
-        display: block;
-        margin-top: -75px;
-        height: 75px;
-    }
+h1[id]:before, h2[id]:before, h3[id]:before, h4[id]:before, h5[id]:before, h6[id]:before {
+    content: "";
+    display: block;
+    margin-top: -75px;
+    height: 75px;
 }
 
 ul.nav li.main {
@@ -110,5 +108,11 @@ div.source-links {
     .bs-sidebar.affix-bottom,
     .bs-sidebar.affix {
         width: 263px;
+    }
+}
+
+@media (max-width: 992px) {
+    div[role=main]{
+        pointer-events: none;
     }
 }
